# Personal-Finance-tracker

./: CMakeLists.txt  build.sh
data/: transactions.txt
src/account/: Account.cpp  Account.h
src/manager/: FinanceManager.cpp  FinanceManager.h
src/transaction/: Transaction.cpp  Transaction.h
tests/: CMakeLists.txt  test_finanace_manager.cpp
